# cs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  compile_commands.json  config.h  cs  makefile  xmake.lua
.cache/clangd/index/: config.h.D3F41C4785580FA5.idx  err.h.D0F96FCA431688C8.idx  file.h.30EBBE2FA76DE14C.idx  myls.cpp.BDBB0C02C45F8736.idx
doc/: font_install.md  font_install_zh.md
img/: uugai.com_1678698633511.png:Zone.Identifier
pkg/deb/: cs_0.2.5_amd64.deb
pkg/deb/cs/DEBIAN/: control
src/: err.h  myls.cpp
src/assets/: iconDirs.h  iconExtension.h  iconFilename.h  icons.h  test.cpp
src/cmd/: run.cpp
src/core/: arranger.cpp  arranger.h  flagParser.cpp  flagParser.h  flags.cpp  flags.h  logger.h  longArranger.cpp  longArranger.h  myls.cpp  run.cpp  sys.h  term.h
src/file/: 2  file.cpp  file.h
test/: test.cpp
